--- a/service.html
+++ b/service.html
@@ -69,14 +69,15 @@
                 </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-3 text-center">
-            <div class="card pt-5 pb-4">
-                <div class="card-body">
-                  <h3 class="card-title">123</h3>
-                  <p class="card-text">Outlets</p>
-                </div>
-            </div>
-          </div>
+          <div class="col-lg-3 col-md-3 col-sm-12">
+           <div class="card align-items-center  pt-4 pb-4">
+               <img src="images/FOOD.png" class="img-fluid" width="55%">
+               <div class="card-body">
+                 <h3 class="card-title pt-3">Rs.600</h3>
+                 <p class="card-text">Order Now</p>
+               </div>
+           </div>
+         </div>
         </div>
       </div>
       <div class="container1">
