--- a/service.html
+++ b/service.html
@@ -45,36 +45,35 @@
       </div>
       <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-3 pt-5 pb-5">
-                <div class="card1 align-items-center pt-3 pb-3">
-                    <div class="card-body">
-                      <h3 class="card-title">100</h3>
-                      <p class="card-text">Chef</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-3 pt-5">
-              <div class="card align-items-center  pt-3 pb-3">
-                  <div class="card-body">
-                    <h3 class="card-title">300</h3>
-                    <p class="card-text">menu</p>
-                  </div>
-              </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-3 pt-5">
-            <div class="card align-items-center  pt-5 pb-4">
-                <div class="card-body">
-                  <h3 class="card-title">30</h3>
-                  <p class="card-text">Country</p>
-                </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-3 col-sm-12">
+             <div class="col-lg-3 col-md-6 col-sm-3">
            <div class="card align-items-center  pt-4 pb-4">
-               <img src="images/FOOD.png" class="img-fluid" width="55%">
                <div class="card-body">
-                 <h3 class="card-title pt-3">Rs.600</h3>
-                 <p class="card-text">Order Now</p>
+                 <h3 class="card-title pt-3">30</h3>
+                 <p class="card-text">country</p>
+               </div>
+           </div>
+         </div>
+          <div class="col-lg-3 col-md-6 col-sm-3">
+           <div class="card align-items-center  pt-4 pb-4">
+               <div class="card-body">
+                 <h3 class="card-title pt-3">300</h3>
+                 <p class="card-text">Menu</p>
+               </div>
+           </div>
+         </div>
+        <div class="col-lg-3 col-md-6 col-sm-3">
+           <div class="card align-items-center  pt-4 pb-4">
+               <div class="card-body">
+                 <h3 class="card-title pt-3">100</h3>
+                 <p class="card-text">Chef</p>
+               </div>
+           </div>
+         </div>
+           <div class="col-lg-3 col-md-6 col-sm-3">
+           <div class="card align-items-center  pt-4 pb-4">
+               <div class="card-body">
+                 <h3 class="card-title pt-3">100</h3>
+                 <p class="card-text">Chef</p>
                </div>
            </div>
          </div>
