--- a/service.html
+++ b/service.html
@@ -46,33 +46,33 @@
       <div class="container">
         <div class="row">
              <div class="col-lg-3 col-md-6 col-sm-3 pt-5 pb-5">
-           <div class="card1 align-items-center  pt-4 pb-4">
+           <div class="card1 align-items-center  pt-2 pb-2">
                <div class="card-body">
-                 <h3 class="card-title pt-3">30</h3>
+                 <h3 class="card-title">30</h3>
                  <p class="card-text">country</p>
                </div>
            </div>
          </div>
           <div class="col-lg-3 col-md-6 col-sm-3 pt-5 pb-5">
-           <div class="card1 align-items-center  pt-4 pb-4">
+           <div class="card1 align-items-center  pt-2 pb-2">
                <div class="card-body">
-                 <h3 class="card-title pt-3">300</h3>
+                 <h3 class="card-title">300</h3>
                  <p class="card-text">Menu</p>
                </div>
            </div>
          </div>
         <div class="col-lg-3 col-md-6 col-sm-3 pt-5 pb-5">
-           <div class="card1 align-items-center  pt-4 pb-4">
+           <div class="card1 align-items-center  pt-2 pb-2">
                <div class="card-body">
-                 <h3 class="card-title pt-3">100</h3>
+                 <h3 class="card-title">100</h3>
                  <p class="card-text">Chef</p>
                </div>
            </div>
          </div>
            <div class="col-lg-3 col-md-6 col-sm-3 pt-5 pb-5">
-           <div class="card1 align-items-center  pt-4 pb-4">
+           <div class="card1 align-items-center  pt-2 pb-2">
                <div class="card-body">
-                 <h3 class="card-title pt-3">100</h3>
+                 <h3 class="card-title">100</h3>
                  <p class="card-text">Chef</p>
                </div>
            </div>
