--- a/service.html
+++ b/service.html
@@ -70,10 +70,10 @@
            </div>
          </div>
            <div class="col-lg-3 col-md-6 col-sm-3 pt-5 pb-5">
-           <div class="card1 align-items-center  pt-4 pb-4">
+           <div class="card1 pt-4 pb-4">
                <div class="card-body">
-                 <h3 class="card-title pt-3">100</h3>
-                 <p class="card-text">Chef</p>
+                 <h3 class="card-title text-center pt-3">100</h3>
+                 <p class="card-text text-center">Chef</p>
                </div>
            </div>
          </div>
